added Linda's edit to TBA section

--- a/paper/submission/ZW10157-response-1.tex
+++ b/paper/submission/ZW10157-response-1.tex
@@ -62,7 +62,7 @@ journal so the physics context for the application needs to be clear.
 
 {\bf Our response:} {\color{blue} 
 	Several changes were made in the paper to address this concern. 
-	 abstract to explain the AWA problem. 
+	The abstract was edited to explain the AWA problem. 
 	Here is the new abstract in it's entirety: 
 	
 	Particle accelerators are invaluable tools for research in the basic and applied sciences, such as materials science, chemistry,
@@ -111,6 +111,27 @@ differentiates itself by being open source (i.e. free to use), massively
 parallel, and fully 3D.
 
 
+The following information was added on lines 479-496:
+
+
+Overall this solution is satisfactory, and meets all requirements for the new TBA beamline at the AWA.
+A Power Extractor and Transfer Structure (PETS) will be located after the septum and quadrupoles in Fig. 7.
+This device is putting the tightest constraints on the beam parameters.  
+The aperture diameter is 17.6 mm and bunch length should be below 2 mm
+to facilitate large power extraction [new ref here].  
+
+The optimization results shown here were used in part to meet all TBA requirements. 
+After adjustments to include 3D rf field maps and CSR in the dipoles[new ref here] 
+the max beamsizes at the PETS location were below 10 mm with a bunch length of rmsz=1.6 mm. 
+Although the simulation results at the PETS location cannot yet be verified, since the beamline is not yet completely installed, 
+some checks have been possible for the partially completed beamline.  
+Simulations of the partial beamline have been done.
+For example, beam images were taken on the YAG screen located downstream of the kicker and 
+the extracted beam sizes at different kicker angles compared to simulation [new ref here].  
+When it becomes possible to test the complete simulation solution, it is expected that there will not be perfect agreement with simulation;
+for example there may be errors in the fields of beamline elements.  However, the simulation can be a tool to track down the source of
+discrepancies, such as understanding the effect of the gun field on the beam symmetry.  
+More importantly, the optimization results should provide significant improvement in efficiency for achieving a good operational regime.
 
 
 }
