new bib, small changes to paper

--- a/paper/submission/paper.bib
+++ b/paper/submission/paper.bib
@@ -1,3 +1,26 @@
+@thesis{neveuthesis, 
+author = {Nicole Neveu},
+title = {Beam Line Design for Fully Staged Two Beam Acceleration at the Argonne Wakefield Accelerator Facility}, 
+month = {Dec},
+year = 2018, 
+}
+
+@article{PETSeq,
+	title = {Design and testing of a 7.8 GHz power extractor using a cylindrical dielectric-loaded waveguide},
+	author = {Gao, F. and Conde, M. E. and Gai, W. and Jing, C. and Konecny, R. and Liu, W. and Power, J. G. and Wong, T. and Yusof, Z.},
+	journal = {Phys. Rev. ST Accel. Beams},
+	volume = {11},
+	issue = {4},
+	pages = {041301},
+	numpages = {10},
+	year = {2008},
+	month = {Apr},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevSTAB.11.041301},
+	url = {https://link.aps.org/doi/10.1103/PhysRevSTAB.11.041301}
+}
+
+
 @article{jefferson,
 	title = {Simultaneous optimization of the cavity heat load and trip rates in linacs using a genetic algorithm},
 	author = {Terzi\ifmmode \acute{c}\else \'{c}\fi{}, Bal\ifmmode \check{s}\else \v{s}\fi{}a and Hofler, Alicia S. and Reeves, Cody J. and Khan, Sabbir A. and Krafft, Geoffrey A. and Benesch, Jay and Freyberger, Arne and Ranjan, Desh},
