--- a/paper/submission/prab.tex
+++ b/paper/submission/prab.tex
@@ -89,7 +89,7 @@ Particle accelerators are invaluable tools for research in the basic and applied
   further complicates the optimization work that must be done for multiple constraints and challenging operational regimes. 
   One example of this is an independently staged two-beam acceleration experiment which requires the construction 
   of an additional beamline (this is now in progress).  The high charge drive beam, well into the space charge regime, must be threaded
-  through small aperture (\SI{17.6}{mm}) decelerating structures.  
+  through small aperture (17.6 mm) decelerating structures.  
   In addition, the bunch length must be sufficiently short to maximize power generation in the decelerator.  
 We propose to tackle this problem by means of multi-objective optimization algorithms which also facilitate a parallel deployment.
 In order to compute solutions in a meaningful time frame, a fast and scalable software framework is required.
@@ -100,7 +100,6 @@ Using evolutionary algorithms as the optimizer and \textsc{OPAL} as the forward 
   Optimized solutions for the new high charge drive beamline found by the framework were used to finish the design 
   of a two beam acceleration experiment.
   The selected solution along with the associated beam parameters is presented.
-  
   
 \end{abstract}
 
