--- a/paper/submission/theor-experiment.tex
+++ b/paper/submission/theor-experiment.tex
@@ -119,9 +119,10 @@ transverse momentum, and longitudinal energy spread.
 The design variables include the two gun solenoids and 
 the first four quadrupoles strengths. 
 This problem encompasses high dimensionality 
-and nonlinear effects such as space charge. There is no existing information
-that accurately predicts optimized parameters for this beam line. 
-This work is meaningful in that it will guide future operations at the AWA.
+and nonlinear effects such as space charge. 
+Using this model it was possible to find good solutions that meet the 
+operational goals for the new beamline.  One of these solutions is 
+presented in the next section.
 
 
 \subsubsection{Time Step Scan} \label{awa:subsection:test}
