lot's of small edits, mostly commas

--- a/paper/submission/ZW10157-response-1.tex
+++ b/paper/submission/ZW10157-response-1.tex
@@ -265,7 +265,7 @@ Particle Tracer’s optimization system start evaluating the next
 generation before all individuals in the present generation complete,
 too.
 
-{\bf Our response:} {\color{blue} A line XX has been added indicating this capability in GPT too.}
+{\bf Our response:} {\color{blue} Line 123 in the new manuscript indicates this capability is in GPT too.}
 
 - Section III subsection D lines 229-231 Geometry optimization. With
 PISA-based systems, Bazarov and Hofler have done this (see PISA-based
@@ -288,15 +288,15 @@ of the paper should be the optimization results not the details of the
 implementation and design. 
 
 {\bf Our response:} {\color{blue} 
-	Respectfully, we point out Referee A's comment that 
-	``Computing and algorithms'' is listed under PRAB's scope. 
-	However, for those interested in physics and not implementation details (i.e. user of code not developer), 
-	we had hoped the AWA optimization problem would 
-	provide a meaningful and tangible use case for the framework.
-	It seems we did not present that part of the paper strongly enough. 
-	We hope some of the additions above have helped in this area.
-	However, would also like to keep some computational details for those who 
-	may be interested in code development specifically for accelerator optimization.
+	Additions were made to the text to enhance the discussion of the 
+	physical problem and extend the discussion of the results.  For example, 
+	the abstract was extended, and additional discussion was added to the 
+	optimization results section. The code snippets were moved out of the 
+	main body of the paper.  However, we would also like to keep some 
+	computational details for those who may be interested in code 
+	development specifically for accelerator optimization.  Hopefully this 
+	is justified since "Computing and algorithms" is listed under PRAB's 
+	scope.
 }
 
 
@@ -323,7 +323,7 @@ the application of the target AWA machine (the Gulliford references
 use this approach).
 
 {\bf Our response: }{\color{blue} 	
-	We hope the additions above are addressing these issues. }
+	We hope the additions above (including response to Ref. A) are addressing these issues.}
 
 Following are comments/suggestions/questions organized by paper
 section.
