--- a/paper/submission/paper.bib
+++ b/paper/submission/paper.bib
@@ -1,7 +1,7 @@
-@thesis{neveuthesis, 
+@phdthesis{neveuthesis, 
 author = {Nicole Neveu},
 title = {Beam Line Design for Fully Staged Two Beam Acceleration at the Argonne Wakefield Accelerator Facility}, 
-month = {Dec},
+school = {Illinois Institute of Technology}
 year = 2018, 
 }
 
@@ -117,7 +117,16 @@ year = 2018,
 	doi =          "10.1016/j.apnum.2007.01.019"
 }
 
-
+@article{marija,
+	title = "Multi-objective shape optimization of radio frequency cavities using an evolutionary algorithm",
+	journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
+	volume = "920",
+	pages = "106 - 114",
+	year = "2019",
+	issn = "0168-9002",
+	doi = "https://doi.org/10.1016/j.nima.2018.12.066",
+	url = "http://www.sciencedirect.com/science/article/pii/S0168900218318801"
+}
 
 @article{pets,
     title = {Design and testing of a 7.8 GHz power extractor using a cylindrical dielectric-loaded waveguide},
@@ -925,14 +934,6 @@ language={English}
   organization={ACM}
 }
 
-
-@misc{iakb:13,
-  author = {Ineichen, Y. and Adelmann, A. and Kolano, A. and Bekas, C. and
-      Curioni, A. and Arbenz, P.},
-  year = {2013},
-  title = {A Parallel General Purpose Multi-Objective Optimization Framework, Applied To Beam Dynamic Studies},
-  note = {submitted to SISC},
-}
 
 @inproceedings{keeb:95,
     abstract = {A concept for the optimization of nonlinear functions using particle swarm methodology is introduced. The evolution of several paradigms is outlined, and an implementation of one of the paradigms is discussed. Benchmark testing of the paradigm is described, and applications, including nonlinear function optimization and neural network training, are proposed. The relationships between particle swarm optimization and both artificial life and genetic algorithms are described},
